--- a/homework/08-09/src/tic-tac-toe/styles/main.css
+++ b/homework/08-09/src/tic-tac-toe/styles/main.css
@@ -3,7 +3,12 @@ body {
   background: #f4f4f4;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   font-weight: 400;
 }
@@ -11,8 +16,12 @@ h1,h2,h3,h4,h5,h6 {
 button {
   cursor: pointer;
   line-height: 1;
-}
 
-button:disabled {
-  cursor: not-allowed;
+  &:hover:not(:disabled) {
+    opacity: 0.9;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 }
