--- a/homework/08-09/src/tic-tac-toe/Game.css
+++ b/homework/08-09/src/tic-tac-toe/Game.css
@@ -1,8 +1,11 @@
 .Game {
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   gap: 60px;
-  
+  width: 450px;
+  margin: 0 auto;
+
   --primary-color: #1b1a19;
   --secondary-color: #f7f3ed;
   --square-size: 80px;
