[학습] forwardRef, 애니메이션(vanilla-tilt, motion one)

--- a/15-using-react-refs/src/routes/motion-one-in-scroll/components/Progress.module.css
+++ b/15-using-react-refs/src/routes/motion-one-in-scroll/components/Progress.module.css
@@ -9,7 +9,8 @@
   background-color: #e8702a;
   backdrop-filter: blur(4px);
   transform-origin: left center;
-  transform: scaleX(0.01); /* 0 → 1 */
+  transform: scaleX(0);
+  /* 0 → 1 */
 }
 
 .output {
