--- a/15-using-react-refs/src/routes/motion-one-timeline/components/PracticeSVGPathAnimation.module.css
+++ b/15-using-react-refs/src/routes/motion-one-timeline/components/PracticeSVGPathAnimation.module.css
@@ -1,10 +1,39 @@
 .component {
+  display: flex;
+  flex-flow: column;
+  align-items: start;
+  gap: 40px;
+  margin-block: 40px;
   min-block-size: 100px;
   border: 3px dashed color-mix(in srgb, var(--accent-color) 80%, #fff 100%);
   border-radius: 6px;
   padding: 40px;
 
+
+
   &:hover {
     border-color: var(--accent-color);
+  }
+
+  svg {
+    * {
+      visibility: hidden;
+      stroke-dasharray: 1;
+      stroke-dashoffset: 1;
+    }
+  }
+}
+
+.button {
+  opacity: 0.9;
+  border: 0;
+  border-radius: 6px;
+  padding: 12px 32px;
+  font-weight: 800;
+  background-color: var(--accent-color);
+  color: var(--white);
+
+  &:hover {
+    opacity: 1;
   }
 }
